去除fastjson，改进数据库配置，改进打包脚本